[feat] : 엑세스 토큰에 RoleType 추가