@@ -8,11 +8,12 @@ import io.swagger.v3.oas.models.security.SecurityRequirement;
 import io.swagger.v3.oas.models.security.SecurityScheme;
 import io.swagger.v3.oas.models.servers.Server;
 import java.util.Arrays;
+import java.util.List;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpHeaders;
 
-//@Configuration
+@Configuration
 public class SpringDocsConfig {
     private static final String API_TITLE = "Reddy API";
     private static final String API_VERSION = "1.0.0";
@@ -29,29 +30,27 @@ public class SpringDocsConfig {
                 .version(API_VERSION)
                 .description(API_DESCRIPTION)
                 .contact(API_CONTACT);
-            // TODO : Security 연결시 주석 제거
-//        // Security 스키마 설정
-//        SecurityScheme bearerAuth = new SecurityScheme()
-//                .type(SecurityScheme.Type.HTTP)
-//                .scheme("bearer")
-//                .bearerFormat("JWT")
-//                .in(SecurityScheme.In.HEADER)
-//                .name(HttpHeaders.AUTHORIZATION);
-//
-//        // Security 요청 설정
-//        SecurityRequirement addSecurityItem = new SecurityRequirement();
-//        addSecurityItem.addList("JWT");
+        // Security 스키마 설정
+        SecurityScheme bearerAuth = new SecurityScheme()
+                .type(SecurityScheme.Type.HTTP)
+                .scheme("bearer")
+                .bearerFormat("JWT")
+                .in(SecurityScheme.In.HEADER)
+                .name(HttpHeaders.AUTHORIZATION);
+
+        // Security 요청 설정
+        SecurityRequirement addSecurityItem = new SecurityRequirement();
+        addSecurityItem.addList("JWT");
 
         Server localServer = new Server();
         localServer.setUrl("http://localhost:8080");
 
         return new OpenAPI()
-                .servers(Arrays.asList(localServer))
-                // TODO : Security 연결시 주석 제거
-//                // Security 인증 컴포넌트 설정
-//                .components(new Components().addSecuritySchemes("JWT", bearerAuth))
-//                // API 마다 Security 인증 컴포넌트 설정
-//                .addSecurityItem(addSecurityItem)
+                .servers(List.of(localServer))
+                // Security 인증 컴포넌트 설정
+                .components(new Components().addSecuritySchemes("JWT", bearerAuth))
+                // API 마다 Security 인증 컴포넌트 설정
+                .addSecurityItem(addSecurityItem)
                 .info(info);
     }
 }
